--- a/Lab01/Properties/Settings.settings
+++ b/Lab01/Properties/Settings.settings
@@ -1,16 +1,7 @@
-﻿<?xml version='1.0' encoding='utf-8'?>
+<?xml version='1.0' encoding='utf-8'?>
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Lab01.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="Example" Type="System.Int32" Scope="User">
-      <Value Profile="(Default)">0</Value>
-    </Setting>
-    <Setting Name="Parametr" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">False</Value>
-    </Setting>
-    <Setting Name="Jakkolwiek" Type="System.String" Scope="User">
-      <Value Profile="(Default)">ASDFDASD</Value>
-    </Setting>
     <Setting Name="WeatherConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
@@ -18,6 +9,9 @@
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Weather.mdf;Integrated Security=True</Value>
+    </Setting>
+    <Setting Name="Setting" Type="System.Drawing.Color" Scope="Application">
+      <Value Profile="(Default)">Teal</Value>
     </Setting>
   </Settings>
 </SettingsFile>
