--- a/Lab01Tests/packages.config
+++ b/Lab01Tests/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Eto.OxyPlot.Wpf" version="1.0.5377.38510" targetFramework="net472" />
   <package id="MSTest.TestAdapter" version="1.3.2" targetFramework="net472" />
   <package id="MSTest.TestFramework" version="1.3.2" targetFramework="net472" />
+  <package id="OxyPlot.Core" version="1.0.0" targetFramework="net472" />
 </packages>
